# zai-glm-kitchen

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CODE_REVIEW.md  GLM52_SESSION_MEMORY.md  GLM52_TRACE_PLAN.md  JANGTQ_K_SPEED_PLAN.md  KITCHEN_RESULTS.md  LOCAL_SETUP.md  PLAN.md  README.md  REAP37_EXPERIMENTS.md  REMEDIATION_PLAN.md  glm52_baseline_regression_output.txt  glm52_dense_bluefalon_output.txt  glm52_shortgpt_merge_sort_output.txt  glm52_sparse_gather_bluefalcon_output.txt  glm52_sparse_gather_merge_sort_output.txt  pyproject.toml
.github/workflows/: glm52-dry-run.yml
common/: README.md
common/baselines/: glm52_longctx_retrieval_baseline.sh  glm52_merge_sort_baseline.sh  long_coding_task_20k_prompt.md  long_coding_task_20k_retrieval_prompt.md  long_coding_task_4k_retrieval_prompt.md
common/phase3_dsa_unblock/: README.md  post_patch_longctx.txt  post_patch_merge_sort.txt  post_revert_longctx.txt  pre_patch_longctx.txt  pre_patch_merge_sort.txt
common/prompts/: README.md  glm52_code_switch_suite.expanded.jsonl  glm52_trace_smoke_suite.expanded.jsonl  glm52_trace_smoke_suite.json
common/reports/: glm52_4386_vs_l54_task_divergence_report.md  glm52_activation_cross_task_full_report.md  glm52_activation_cross_task_full_summary.json  glm52_activation_cross_task_report.md  glm52_activation_cross_task_summary.json  glm52_activation_full_report.md  glm52_activation_full_summary.json  glm52_activation_pilot_report.md  glm52_activation_pilot_summary.json  glm52_baseline_vs_reap37.json  glm52_baseline_vs_reap37.md  glm52_channel_2232_focus_report.md  glm52_channel_2232_focus_summary.json  glm52_channel_2305_focus_report.md  glm52_channel_2305_focus_summary.json  glm52_channel_4386_focus_report.md  glm52_channel_4386_focus_summary.json  glm52_channel_4386_not_in_embedding_report.md  glm52_channel_506_focus_report.md  glm52_channel_506_focus_summary.json  glm52_code_switch_report.md  glm52_code_switch_summary.json  glm52_cybersecurity_l54_channels_report.md  glm52_marker_depth_arc_comparison_report.md  glm52_moe_trace_report.md  glm52_moe_trace_summary.json  glm52_multilingual_full_report.md  glm52_multilingual_full_summary.json  glm52_multilingual_routing_report.md  glm52_multilingual_routing_summary.json  glm52_real_sample_report.md  glm52_real_sample_summary.json  (+5 more)
glm52_kitchen/: __init__.py
layer-level-structured-pruning/: README.md
logs/: dsa_sweep_results.json
mixed-precision-quantization/: README.md
mlx-export/: check_magnitudes.py  convert_glm52_jangtq_k.py  diagnose_forward.py  find_explosion.py  find_explosion2.py  gguf_to_mlx_streaming.py  glm_moe_dsa.py  inspect_attn.py  inspect_moe.py  patch_jang_attn_test.py  predicate.py  run_mlx_baseline.py  strip_mtp_layer.py  test_rope_native.py  test_rope_norm.py  test_shapes.py  trace_attention_shape.py
scripts/: cache_test_shortgpt.py  check_mlx_export_status.sh  jangtq_53k_coherence_test.py  jangtq_prefill_split_bench.py  longctx_decode_bench.py  sweep_dsa_decode.py  watch_mlx_export.sh  watch_mlx_export_4bit.sh
tests/: test_channel_focus.py  test_tracing_analyze.py  test_tracing_retrieval.py  test_tracing_schema_writer.py
(+386 files in other folders)
