[project]
name = "glm52-kitchen"
version = "0.1.0"
description = "GLM-5.2 research kitchen: tracing framework, mixed-precision quantization, layer-level structured pruning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Barron Tang", email = "barrontom2011@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gguf>=0.18.0",
    "numpy",
    "gguf2mlx",
]

[tool.uv.sources]
# gguf2mlx converter vendored as a git submodule pinning the
# feature/update_for_glm5.2_cooking branch of Deviad/gguf2mlx. Its
# `convert()` entry point is the end-to-end GGUF -> MLX translator used
# for the Phase 8 MLX conversion step.
# https://docs.astral.sh/uv/concepts/projects/dependencies/#path-dependencies
gguf2mlx = { path = "vendor/gguf2mlx", editable = true }


[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# Keep pytest scoped to the kitchen's own `tests/` directory — otherwise it
# would also descend into vendor/ submodule checkouts (gguf2mlx, llama.cpp)
# and error out collecting their optional-dependency tests.
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["glm52_kitchen"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
